# energy-price-forecasting-prophet-ml-engine

./: .gitignore  EU_ENERGY_PLATFORM_CONSOLIDATED.py  README.md  pyproject.toml  requirements.txt
src/eu_energy_intelligence/: __init__.py  backfill.py  bridge_2030.py  canonical_bridge.py  cli.py  consolidated_bridge.py  constants.py  contracts.py  production_2030.py  production_consolidated.py  production_extension.py  reliability.py  runtime.py  settings.py
src/eu_energy_intelligence/features/: __init__.py  builders.py
src/eu_energy_intelligence/gold/: __init__.py  builders.py
src/eu_energy_intelligence/ingestion/: __init__.py  entsoe_client.py  overlap.py
src/eu_energy_intelligence/intelligence/: __init__.py  agent.py  backtesting.py  forecaster.py  input_diagnostics.py  local_ml.py  market_stress.py  recommendations.py  reports.py  robust_forecasting.py  scenarios.py
src/eu_energy_intelligence/observability/: __init__.py  reporter.py
src/eu_energy_intelligence/orchestration/: __init__.py  hybrid.py  intelligence_2030.py
src/eu_energy_intelligence/platinum/: __init__.py  tasks.py
src/eu_energy_intelligence/quality/: __init__.py  validator.py
tests/unit/: test_2030_intelligence.py  test_backtesting.py  test_canonical_bridge.py  test_consolidated_runtime.py  test_entsoe_overlap.py  test_extension_architecture.py  test_input_diagnostics.py  test_local_ml.py  test_silver_and_gold.py
