[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eu-energy-intelligence"
version = "0.1.0"
description = "Modular Python and PySpark architecture for the EU Energy Intelligence Platform."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "entsoe-py>=0.6,<1.0",
    "pandas>=2.0,<3.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyspark>=4.1,<5.0",
    "python-dotenv>=1.0,<2.0",
    "PyYAML>=6.0,<7.0",
    "requests>=2.32,<3.0",
    "scikit-learn>=1.4,<2.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0,<27.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.0,<10.0",
    "ruff>=0.11,<1.0",
]
ml = [
    "mlflow>=3.11,<4.0",
    "prophet>=1.3,<2.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["ALL_CODE_BASELINE.py", "full_code.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: marks package wiring and scaffold tests",
]
